Fix formatting of header image to make it work on mobile

--- a/_sass/theme.scss
+++ b/_sass/theme.scss
@@ -61,7 +61,7 @@ figcaption {
 
 header {
 	// background-size: cover;
-	padding: 10px 0;
+	padding: 30px 0;
 	color: #fff;
 	overflow: hidden;
 	h2 {
